--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "start-server": "node app.js"
+    "server": "node app.js"
   },
   "author": "Jose Alfredo Torres",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ejs": "2.6.1",
     "express": "4.16.3",
     "express-handlebars": "3.0.0",
